@startuml
'https://plantuml.com/class-diagram

package refs {
    class Party {
        String name
    }

    class Currency {
        String code
    }
}

package gl {
    class GeneralLedge {
        String code
        String name
    }

    class GLAccount {
        String number
    }
    GeneralLedge o-- GLAccount : ledger
    Party o-- GLAccount : party

    class GLRest {
        BigDecimal amount
    }
    Currency o-- GLRest : currency
    GLAccount o-- GLRest : glAccount

    class GLTransaction {
        LocalDate date
        BigDecimal amount
    }
    GLAccount o-- GLTransaction : debit
    GLAccount o-- GLTransaction : credit
    Currency o-- GLTransaction : currency
}
@enduml